added send message button

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
                 </div>
                 <div class="chat-input" >
                     <input type="text-area" placeholder="Type a reply..." id="chat-input">
+                    <button id="send-button"><img src="images/paper-plane-right.svg" alt=""></button>
                     <div class="chat-shortcuts">
                         <div class="gif">
                             <img src="images/gif.svg" alt="">
                         </div>
-                        <img src="images/smiley.svg" alt="">
-                        <img src="images/paperclip.svg" alt="">
+                        <img src="images/smiley.svg" alt="" id="emoji">
+                        <img src="images/paperclip.svg" alt="" id="emoji">
                     </div>
                 </div>
             </section>
